add an algorithm to a category

--- a/src/main/webapp/app/algorithm/algorithm.html
+++ b/src/main/webapp/app/algorithm/algorithm.html
@@ -1,23 +1,23 @@
 <div class="container">
     <div class="row">
         <div class="jumbotron">
-            <h1>Plugins(공사 중)</h1>
+            <h1>algorithm(공사 중)</h1>
 
-            <p>공부하면서 만든 자체 플러그인들 입니다.</p>
+            <p>다양한 알고리즘</p>
             <!--<p>사용하실 분들에겐 사용해주시는 것만으로 너무 감사하니 마음껏 사용해주시기 바랍니다.</p>-->
             <p>문의사항은 <a ngclipboard
                         uib-tooltip="클릭시 복사"
                         data-clipboard-text="ikks06luck@naver.com">ikks06luck@naver.com</a>로
                 보내주시기 바랍니다.</p>
         </div>
-        <a ui-sref="owlCaroulsel">
+        <a ui-sref="bubbleSort">
             <div class="col-md-4">
                 <div class="panel panel-info">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Owl-Carousel-1</h3>
+                        <h3 class="panel-title">버블 정렬</h3>
                     </div>
                     <div class="panel-body">
-                        <p>jQuery 플러그인의 Owl-Carousel-1을<br/> Angular1.X로 변환한 플러그인</p>
+                        <p>냉무</p>
                     </div>
                 </div>
             </div>
