--- a/src/main/webapp/app/home/home-profile-dialog.html
+++ b/src/main/webapp/app/home/home-profile-dialog.html
@@ -9,9 +9,15 @@
                  alt="썸네일 수겸이 프로필사진">
         </div>
         <div class="info-wrap">
-            <p>ikks06luck@naver.com</p>
-
-            <p>010-3328-8344</p>
+            <p>
+                GitHub)<a href="https://github.com/sookyumKim" target="_blank">https://github.com/sookyumKim</a>
+            </p>
+            <p>
+                E-mail)&nbsp;<a ngclipboard
+                                uib-tooltip="클릭시 복사"
+                                data-clipboard-text="ikks06luck@naver.com">ikks06luck@naver.com</a>
+            </p>
+            <p>HP)&nbsp;010-3328-8344</p>
         </div>
 
     </div>
