add an algorithm to a category & modify a favicon

--- a/src/main/webapp/app/algorithm/algorithm.html
+++ b/src/main/webapp/app/algorithm/algorithm.html
@@ -22,25 +22,29 @@
                 </div>
             </div>
         </a>
-        <div class="col-md-4">
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    <h3 class="panel-title">comming soon</h3>
-                </div>
-                <div class="panel-body">
-                    comming soon
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    <h3 class="panel-title">comming soon</h3>
-                </div>
-                <div class="panel-body">
-                    comming soon
+        <a ui-sref="selectionSort">
+            <div class="col-md-4">
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">선택 정렬</h3>
+                    </div>
+                    <div class="panel-body">
+                        <p>냉무</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
+        <a ui-sref="insertionSort">
+            <div class="col-md-4">
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">삽입 정렬</h3>
+                    </div>
+                    <div class="panel-body">
+                        <p>냉무</p>
+                    </div>
+                </div>
+            </div>
+        </a>
     </div>
 </div>
