--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,10 +10,20 @@
     <meta name="application-name" content="kskblog">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+    <link rel="apple-touch-icon" href="content/images/favicon/apple-touch-icon.png"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="content/images/favicon/apple-touch-icon-57x57.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="content/images/favicon/apple-touch-icon-72x72.png"/>
+    <link rel="apple-touch-icon" sizes="76x76" href="content/images/favicon/apple-touch-icon-76x76.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="content/images/favicon/apple-touch-icon-114x114.png"/>
+    <link rel="apple-touch-icon" sizes="120x120" href="content/images/favicon/apple-touch-icon-120x120.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="content/images/favicon/apple-touch-icon-144x144.png"/>
+    <link rel="apple-touch-icon" sizes="152x152" href="content/images/favicon/apple-touch-icon-152x152.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="content/images/favicon/apple-touch-icon-180x180.png"/>
+
     <!-- build:css content/css/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/normalize-css/normalize.css" />
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css" />
     <!-- endbower -->
@@ -144,6 +154,10 @@
 <script src="app/blocks/config/http.config.js"></script>
 <script src="app/blocks/config/compile.config.js"></script>
 <script src="app/blocks/config/alert.config.js"></script>
+<script src="app/algorithm/selectionSort/selectionSort.state.js"></script>
+<script src="app/algorithm/selectionSort/selectionSort.controller.js"></script>
+<script src="app/algorithm/insertionSort/insertionSort.state.js"></script>
+<script src="app/algorithm/insertionSort/insertionSort.controller.js"></script>
 <script src="app/algorithm/bubbleSort/bubbleSort.state.js"></script>
 <script src="app/algorithm/bubbleSort/bubbleSort.controller.js"></script>
 <script src="app/admin/user-management/user-management.state.js"></script>
@@ -175,13 +189,13 @@
 <script src="app/account/social/social-auth.controller.js"></script>
 <script src="app/account/settings/settings.state.js"></script>
 <script src="app/account/settings/settings.controller.js"></script>
+<script src="app/account/activate/activate.state.js"></script>
+<script src="app/account/activate/activate.controller.js"></script>
 <script src="app/account/register/register.state.js"></script>
 <script src="app/account/register/register.controller.js"></script>
 <script src="app/account/password/password.state.js"></script>
 <script src="app/account/password/password.controller.js"></script>
 <script src="app/account/password/password-strength-bar.directive.js"></script>
-<script src="app/account/activate/activate.state.js"></script>
-<script src="app/account/activate/activate.controller.js"></script>
 <script src="app/home/home.state.js"></script>
 <script src="app/home/home.controller.js"></script>
 <script src="app/home/home-profile-dialog.controller.js"></script>
