--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,8 +24,8 @@
 
     <!-- build:css content/css/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
-    <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css" />
+    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css"/>
+    <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css"/>
     <!-- endbower -->
     <link rel="stylesheet" href="content/css/vendor.css">
     <link rel="stylesheet" href="bower_components/codemirror/theme/dracula.css">
@@ -84,7 +84,8 @@
 <script src="bower_components/clipboard/dist/clipboard.js"></script>
 <script src="bower_components/ngclipboard/dist/ngclipboard.js"></script>
 <script src="bower_components/codemirror/lib/codemirror.js"></script>
-<script src="bower_components/angular-ui-codemirror/ui-codemirror.js"></script>
+<script src="bower_components/codemirror/mode/javascript/javascript.js"></script>
+<script src="bower_components/codemirror/mode/clike/clike.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -207,6 +208,8 @@
 <script src="app/app.state.js"></script>
 <script src="app/app.controller.js"></script>
 <script src="app/app.constants.js"></script>
+<script src="app/algorithm/quickSort/quickSort.state.js"></script>
+<script src="app/algorithm/quickSort/quickSort.controller.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
 
