--- a/src/main/webapp/app/algorithm/algorithm.html
+++ b/src/main/webapp/app/algorithm/algorithm.html
@@ -46,5 +46,17 @@
                 </div>
             </div>
         </a>
+        <a ui-sref="quickSort">
+            <div class="col-md-4">
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">퀵 정렬</h3>
+                    </div>
+                    <div class="panel-body">
+                        <p>냉무</p>
+                    </div>
+                </div>
+            </div>
+        </a>
     </div>
 </div>
